--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 inc:
   # Blog Information
-  title:        "kiwipace"
+  title:        "kiwipace llc"
   subtitle:     "Creative Software Products for faster Data Access"
   cover_image:  blog-cover.jpg
   logo:         kplogo2.png
